# OCamlStocks

./: .gitignore  .merlin  .ocamlinit  INSTALL.md  Makefile  README.md  _tags  algorithm.ml  algorithm.mli  auth.ml  auth.mli  authors.ml  authors.mli  cashset.ml  cashset.mli  commonwords.csv  config.ml  config.mli  demo.sh  deps.sh  grapher.ml  grapher.mli  lastHistoryScore.txt  main.ml  multiple_users_example.json  newplot  ocamlstocks.opam  optimizer.ml  optimizer.mli  parser.ml  parser.mli  plot  plotofdata  portfolio.ml  portfolio.mli  randominttest.ml  save.ml  saveload.ml  saveload.mli  scraper.ml  (+16 more)
demo_files/: algorithmdemo.ml  cashsetdemo.ml  connotationdemo.ml  demo.sh  demo2.sh  historydemo.ml  parserdemo.ml  scraperdemo.ml  stockdatademo.ml
src/: algorithm.ml  auth.mli  cashset.ml  cashset.mli  config.ml  config.mli  main.mli  parser.ml  parser.mli  portfolio.ml  portfolio.mli  saveload.ml  scraper.ml  stockdata.ml  stockdata.mli  uniformtesting.mli  user.ml
testing_files/: investing-hot.json  stocks-hot.json  stocks-new.json  stocks-rising.json  stocks-top-alltime.json  stocks-top-today.json  stocksnew.json  wallstreetbets-hot.json
