opam-version: "2.0"
maintainer: "All Authors"
authors: ["Duncan McDonald" "Peter Bell" "Matthew Chan" "Miguel Roberts"]
homepage: "https://github.com/Duncan-McD/OCamlStocks"
dev-repo: "git+https://github.com/Duncan-McD/OCamlStocks.git"
bug-reports: "https://github.com/Duncan-McD/OCamlStocks/issues"
depends: [
  "ocaml" {>= "4.11.1"}
  "mechaml"
  "ounit"
  "yojson"
  "lwt_ssl"
  "csv"
]

synopsis: "Ocaml Stock Bot"
